# SensRay

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MERGE_PLAN.md  PLOTTING_MODES.md  QUADPY_REPLACEMENT.md  README.md  SPHERICAL_MESH_PARITY.md  circular_earth_rays.py  demo_seisray.py  mesh_clipped.vtu  pyproject.toml  ray_tracing_tutorial.ipynb  requirements-quadpy.txt  setup.py  simple_demo.py  simple_earth_plot.py  simple_travel_times.py  test.py  test_new_mesh.py  test_octree.py  test_octree_2.py  test_package.py  test_planet_mesh_integration.py  test_quadrature.py
demos/: 00_index.ipynb  01_basic_travel_times.ipynb  01_basic_travel_times.py  01_basic_usage.ipynb  01_sensitivity_kernels.ipynb  02_3d_visualization.ipynb  02_ray_path_visualization.ipynb  02_ray_tracing_kernels copy.ipynb  02_ray_tracing_kernels.ipynb  02_ray_tracing_kernels_no_visualisation.py  03_1D_meshes.ipynb  03_earth_model_comparison.ipynb  03_projecting_models_on_mesh.ipynb  03_ray_tracing_sparse_kernel_matrices.ipynb  04_3d_plots.ipynb  04_projecting_models_on_mesh.ipynb  04_sensitivity_kernels.ipynb  04_spherical_ray_tracing_kernels.ipynb  05_lunar_P_PcP_kernels.ipynb  05_practical_applications.ipynb  06_mesh_discretization_comparison.ipynb  07_earth_model_demo.ipynb  07_forward_operator_G_spherical.ipynb  08_forward_operator_G_pygeoinf.ipynb  08_planet_model_tutorial.ipynb  10_planet_model_comprehensive.ipynb  G_FwdOp.py  LanderLocs.csv  M1_mesh.vtu  M1_mesh_metadata.json  Nunn_catalog_filtered.csv  README.md  Weber Core - picks catalog.csv  class_based_srp.py  prem_mesh.vtu  prem_mesh_metadata.json  prem_mesh_with_rays_kernels.vtu  prem_mesh_with_rays_kernels_metadata.json  prem_octree_demo.vtu  prem_octree_demo_metadata.json  (+13 more)
develop/: assign_property.py  demo_save_load.py  new_mesh.py  plot_spherical_crosssections.py  prem_mesh.vtu_metadata.json  prem_tetrahedral_mesh.vtu  prem_tetrahedral_mesh_metadata.json  ray.py  ray2.py  sphere_shell_tets.vtu  sphere_tets.vtu  super_simple_plot.py  test.ipynb  test.py  test_planet_model.ipynb  test_planet_model.py  tets_combined.py  tets_mesh.py  tets_shell.py  two_layer_sphere.msh  two_layer_sphere.vtu  two_layer_sphere_two_sizes.msh  two_layer_sphere_two_sizes.vtu  two_layer_sphere_two_sizes_smooth.vtu  two_layer_sphere_two_sizes_strict.vtu
scripts/: extract_notebook_images.py
seisray/: __init__.py
sensray/: __init__.py  coordinates.py  model.py  mymodel.nd  mymodel.npz  planet_mesh.py  planet_model.py  quadrature.py  test.py
tests/: test_planet_mesh.py  (+1 more)
(+56 files in other folders)
