[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensray"
version = "0.3.0"
description = "Seismic ray tracing, travel times, and 3D visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["seismology", "ray-tracing", "travel-times", "earth-models"]
authors = [
    {name = "PhD Student"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
    "obspy>=1.3.0",
    "geographiclib>=2.1",
    "trame>=3.11",
    "trame-vtk>=2.10",
    "trame-vuetify>=3.1",
    "vtk>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]
notebooks = [
    "jupyter",
    "ipython",
    "ipywidgets",
]
geographic = [
    "cartopy>=0.20.0",
]
meshing = [
    "pyvista>=0.40.0",
    "meshio>=5.0.0",
    "pygmsh>=7.1.17",
]
quadpy = [
    "quadpy>=0.16.0",
]
all = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
    "jupyter",
    "ipython",
    "ipywidgets",
    "cartopy>=0.20.0",
    "pyvista>=0.40.0",
    "meshio>=5.0.0",
    "pygmsh>=7.1.17",
    "quadpy>=0.16.0",
]

[project.urls]
"Bug Reports" = "https://github.com/username/sensray/issues"
"Source" = "https://github.com/username/sensray"
"Documentation" = "https://github.com/username/sensray/tree/main/demos"

[tool.setuptools.packages.find]
where = ["."]
include = ["sensray*"]

[tool.setuptools.package-data]
sensray = ["models/*.nd"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
